color picker component : fix z-index issue

--- a/src/themes/millet/_overrides.scss
+++ b/src/themes/millet/_overrides.scss
@@ -368,6 +368,12 @@ hr {
 /**
  * NEW COMPONENTS
  */
+
+
+.color-picker-container{
+  z-index: 5;
+}
+
 .collapsable{
   transition: all $transition-medium ease;
   max-height: 30rem;
